CEL-898. Update chorus to actual state. Without git history saving